--- a/boot/src/main/resources/application.yml
+++ b/boot/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 muyun:
   debug: true
   super-user-id: 1 #超级管理员ID
+web:
+  redirects: # 支持配置301跳转
+    - from: /
+      to: /web/
 frontend:
   resources:
     - prefix: /web1/
