--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,7 @@ muyun-core = { module = "net.ximatai.muyun:muyun-core", version.ref = "muyun" }
 muyun-database-std = { module = "net.ximatai.muyun:muyun-database-std", version.ref = "muyun" }
 muyun-platform = { module = "net.ximatai.muyun:muyun-platform", version.ref = "muyun" }
 muyun-proxy = { module = "net.ximatai.muyun:muyun-proxy", version.ref = "muyun" }
+muyun-log = { module = "net.ximatai.muyun:muyun-log", version.ref = "muyun" }
 muyun-authorization = { module = "net.ximatai.muyun:muyun-authorization", version.ref = "muyun" }
 caffeine = { module = "com.github.ben-manes.caffeine:caffeine", version.ref = "caffeine" }
 
