--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-#quarkus = "3.19.1"
+quarkus = "3.19.1"
 muyun = "1.0.0-SNAPSHOT"
-muyun = "0.1.11"
+#muyun = "0.1.11"
 caffeine = "3.2.0"
 testcontainers = "1.20.3"
 
